--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     <div class="container">
         <h1>Bem-vindo ao YesBaby!</h1>
         <p>Descubra algo incrível. Estamos aqui para te surpreender!</p>
+        <p>algorsas!</p>
+
         <a href="#explore" class="button">Explore Agora</
     </div>
 </body>
