--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h1>Bem-vindo ao YesBaby!</h1>
         <p>Descubra algo incrível. Estamos aqui para te surpreender!</p>
         <p>algorsas!</p>
-
+        <p>sim esxtatos!</p>
         <a href="#explore" class="button">Explore Agora</
     </div>
 </body>
