--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     
+<Beleza vambor></Beleza>
+
     <p>Sonin blenim</p>
     <p>fgaeuuyijoyuyugjiop nievfg</p>
     <p>testintg</p>
